clusters/staging/infrastructure/kubernetes-dashboard/kubernetes-dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kubernetes-dashboard-ingress
    namespace: kubernetes-dashboard
    annotations:
      gethomepage.dev/description: Dynamically Detected Kubernetes Dashboard
      gethomepage.dev/enabled: "true"
      gethomepage.dev/group: Cluster Management
      gethomepage.dev/icon: kubernetes.png
      gethomepage.dev/name: Kubernetes Dashboard
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: staging-dashboard.ndlovucloud.co.zw
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubernetes-dashboard-web
                port:
                  number: 443
